feat: return full plugin detail graph content
